--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 PORT=3000
+PIPEDRIVE_KEY=8ed4836b70edc9569722728043d547ec634351bf
+PIPEDRIVE_BASE_URL=https://api.pipedrive.com/v1/
+BLING_BASE_URL=https://bling.com.br/Api/v2/
